Fix flexbox on IE11

--- a/src/components/Nav-Components/Nav.css
+++ b/src/components/Nav-Components/Nav.css
@@ -9,6 +9,16 @@
 	background-size: cover;
 	margin-bottom: 1.5rem;
 }
+
+
+
+/* Title text and School logo */
+.outerLogos {
+	display: flex;
+	flex-direction: row;
+	text-align: center;
+	clear: right;
+}
 .logos {
 	min-height: 16rem;
 	display: flex;
@@ -16,7 +26,7 @@
 	justify-content: space-around;
 	align-items: center;
 	text-align: center;
-	clear: right;
+	width: 100%;
 }
 .logos h1 {
 	font-size: 3rem;
@@ -36,6 +46,8 @@
 		height: 9rem;
 	}
 }
+
+
 
 /* Navbar for desktop */
 .navBar {
@@ -78,6 +90,8 @@
 		width: 100%;
 	}
 }
+
+
 
 /* Navbar for mobile */
 @media (min-width: 768px) {
